# findit-2026

./: .gitignore  ML_PLAN.txt  README.md  main.py  pyproject.toml
notebooks/: 00_main_pipeline_submission.ipynb  01_eda_data_audit.ipynb  02_data_split_prep.ipynb  04_experiments.ipynb  05_colab_drive_training_bootstrap.ipynb
reports/tables/: ensemble_submit_plan_20260329_011951.csv  ensemble_top10_oof_20260329_011951.csv  experiment_candidates_full_20260330_135519.csv  experiment_submit_plan_20260330_135519.csv  experiment_submit_plan_20260330_163409.csv  experiment_submit_plan_20260401_020410.csv
scripts/: backfill_test_probs.py  rewrite_data_csv_paths_for_drive.py
